<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>boost_sml_vendor</name>
  <version>1.1.11</version>
  <description>
    Vendor package for the Boost SML (State Machine Language)
  </description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <license>MIT</license>  <!-- The contents of this package -->
  <license>BSL-1.0</license>  <!-- Boost SML -->

  <url type="website">https://github.com/boost-ext/sml</url>

  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
